--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -3,8 +3,8 @@ body {
 }
 
 #header {
-    float: rigt;
-    width: 500%;
+    float: none;
+    width: 100%;
 }
 
 #container {
@@ -44,7 +44,7 @@ body {
 }
 
 .tab {
-    font-size = 120pt;
+    font-size: 120pt;
     font-weight: bold;
 }
 
@@ -61,7 +61,6 @@ body {
     width: 100%;
     height: 10px;
     overflow: hidden;
-    < marquee scrollamount = "5" > < img src = "images/pizza.jpg" / > < / marquee >
 }
 
 .menu_title {
